# particle-physics

./: CMakeLists.txt  LICENSE  README.md  main.c  main.h  particles.txt
c/: all.c  file.c  imagel.c  pph.c
include/: all.h  collision.h  file.h  imagel.h  pph.h
