cmake_minimum_required (VERSION 2.6)
project (OrigamiKnight)
file(COPY ${PROJECT_SOURCE_DIR}/particles.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(particle-physic c/pph.c c/all.c c/file.c c/collision.c)


IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   include(FindPkgConfig)
   pkg_search_module(SDL2 REQUIRED sdl2) 
   include_directories(${SDL2_INCLUDE_DIRS})
   target_link_libraries(particle-physic ${SDL2_LIBRARIES})
   pkg_search_module(SDL2_TTF REQUIRED SDL2_ttf)
   include_directories(${SDL2_TTF_INCLUDE_DIRS})
   target_link_libraries(particle-physic ${SDL2_TTF_LIBRARIES})
   SET(OperatingSystem "Mac OS X")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")


IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    include(FindPkgConfig)
   pkg_search_module(SDL2 REQUIRED sdl2) 
   include_directories(${SDL2_INCLUDE_DIRS})
   target_link_libraries(particle-physic ${SDL2_LIBRARIES})
   pkg_search_module(SDL2_TTF REQUIRED SDL2_ttf)
   include_directories(${SDL2_TTF_INCLUDE_DIRS})
   target_link_libraries(particle-physic ${SDL2_TTF_LIBRARIES})
    SET(OperatingSystem "Linux")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")


IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	include_directories(${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/include)
	include_directories(${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_mixer-2.0.0/include)
	include_directories(${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/include)
	IF(CMAKE_SIZEOF_VOID_P EQUAL 8) 
		target_link_libraries(particle-physic ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x64/SDL2.lib)
		target_link_libraries(particle-physic ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x64/SDL2main.lib)
		target_link_libraries(particle-physic ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x64/SDL2_ttf.lib)
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x64/SDL2.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x64/libfreetype-6.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x64/SDL2_ttf.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x64/zlib1.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	ELSE(CMAKE_SIZEOF_VOID_P EQUAL 8)
		target_link_libraries(particle-physic ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x86/SDL2.lib)
		target_link_libraries(particle-physic ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x86/SDL2main.lib)
		target_link_libraries(particle-physic ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x86/SDL2_ttf.lib)
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x86/SDL2.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x86/libfreetype-6.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x86/SDL2_ttf.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		file(COPY ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2_ttf-2.0.12/lib/x86/zlib1.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET(OperatingSystem "Windows")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
